objects/Cupon__c.object
<CustomObject>
    <label>Cupon</label>
    <nameField>
        <label>Cupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cupones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flate</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>IF(Expire_Date__c  &lt;  TODAY(),  0, Expire_Date__c - Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>% Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flat_Discount__c</fullName>
        <label>Flat Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quantatity__c</fullName>
        <label>Total Quantatity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Check_Expire_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Expire_Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Error Expire Date Should Always Greater Then Today&apos;s Date</errorMessage>
    </validationRules>
</CustomObject>